--- a/client/src/components/Main.scss
+++ b/client/src/components/Main.scss
@@ -17,3 +17,13 @@ footer {
 .header__image {
   max-width: 80%;
 }
+
+.match-details--title {
+  text-align: center;
+  font-weight: bold;
+  padding: 10px;
+}
+
+.match-details--date {
+  text-align: center;
+}
