organise assets, add partial for sprites

--- a/client/src/components/Main.scss
+++ b/client/src/components/Main.scss
@@ -1,4 +1,4 @@
-@import './../sportdec-colors.scss';
+@import './../assets/partials/sportdec-colors.scss';
 
 header, footer {
   background-color: $royal;
