--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,12 +1,12 @@
-@import './sportdec-colors.scss';
+@import './assets/partials/_sportdec-colors.scss';
 
 @font-face {
   font-family: 'icomoon';
-  src: url('./font/icomoon.eot'); /* IE9 Compat Modes */
-  src: url('./font/icomoon.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./font/icomoon.woff') format('woff'), /* Modern Browsers */
-       url('./font/icomoon.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('./font/icomoon.svg#svgFontName') format('svg'); /* Legacy iOS */
+  src: url('./assets/font/icomoon.eot'); /* IE9 Compat Modes */
+  src: url('./assets/font/icomoon.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./assets/font/icomoon.woff') format('woff'), /* Modern Browsers */
+       url('./assets/font/icomoon.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('./assets/font/icomoon.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
 
 body {
